2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Remove the magic buffer size and use a #define instead. Remove C++
	comments. Return an error if the thread cannot be created.

2003-10-31  Ross Burton  <ross@burtonini.com>

	* src/sj-extractor.c:
	Fix the error signal declaration.

2003-10-30  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Remove redundant gstreamer library checks.

2003-10-26  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Version 0.5.6
	* NEWS:
	Updated.

	* src/cd-drive.c:
	Updated.

2003-10-25  Christian Schaller <Uraeus@gnome.org>

	* Updates for 0.7 compatability
	* configure checks first for 0.7, if not then 0.6
	* Update spec file for latest changes in GStreamer packaging

2003-10-24  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Disable the Extract and Re-read buttons when extracting. Fixes
	#135011.

2003-10-24  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.[ch]:
	Totally rewrite, now actually works correctly!

	* src/sj-extractor.[ch]:
	Remove sj_extractor_get_track_details().

	* src/sj-main.c:
	Make more variables static, and update the UI with a NULL album
	before displaying.

2003-10-24  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Rename the status bar widget. Hint hint at future commit.

a2003-10-24  Alessio Frusciante  <algol@firenze.linux.it>

	* configure.in: Added "it" (Italian) to ALL_LINGUAS.

2003-10-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/sj-extracting.c: (build_filename):
	Convert to locale filesystem encoding if needed.

2003-10-13  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.glade:
	Remove the separator and change the default size (thanks to Paolo
	Borelli)

2003-10-02  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Quote the path given to Nautilus, so correctly deal with paths
	with spaces in.

2003-10-01  Ross Burton  <ross@burtonini.com>

	* src/cd-drive.c: